@@ -10,6 +10,10 @@
 
 <UL>
 
+	<H3>New Features</H3>
+
+	<LI>Added support for remote HTML title pages.
+
 	<H3>Changes</H3>
 
 	<LI>Now accept all JPEG files, even if they don't start
